--- a/requerimento/nbproject/project.properties
+++ b/requerimento/nbproject/project.properties
@@ -4,6 +4,13 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -27,6 +34,13 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.cglib-nodep-2.2.2.jar=web/META-INF/cglib-nodep-2.2.2.jar
+file.reference.easymock-3.1.jar=web/META-INF/easymock-3.1.jar
+file.reference.javassist-3.17.1-GA.jar=web/META-INF/javassist-3.17.1-GA.jar
+file.reference.javax.ejb.jar=web/META-INF/javax.ejb.jar
+file.reference.junit-4.10.jar=web/META-INF/junit-4.10.jar
+file.reference.objenesis-1.2.jar=web/META-INF/objenesis-1.2.jar
+file.reference.powermock-easymock-1.5-full.jar=web/META-INF/powermock-easymock-1.5-full.jar
 file.reference.servlet-api.jar=C:\\Program Files\\Apache Software Foundation\\Tomcat 7.0\\lib\\servlet-api.jar
 includes=**
 j2ee.compile.on.save=true
@@ -52,7 +66,14 @@ javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.cglib-nodep-2.2.2.jar}:\
+    ${file.reference.easymock-3.1.jar}:\
+    ${file.reference.javassist-3.17.1-GA.jar}:\
+    ${file.reference.javax.ejb.jar}:\
+    ${file.reference.junit-4.10.jar}:\
+    ${file.reference.objenesis-1.2.jar}:\
+    ${file.reference.powermock-easymock-1.5-full.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
