--- a/requerimento/nbproject/project.properties
+++ b/requerimento/nbproject/project.properties
@@ -41,7 +41,7 @@ file.reference.javax.ejb.jar=web/META-INF/javax.ejb.jar
 file.reference.junit-4.10.jar=web/META-INF/junit-4.10.jar
 file.reference.objenesis-1.2.jar=web/META-INF/objenesis-1.2.jar
 file.reference.powermock-easymock-1.5-full.jar=web/META-INF/powermock-easymock-1.5-full.jar
-file.reference.servlet-api.jar=C:\\Program Files\\Apache Software Foundation\\Tomcat 7.0\\lib\\servlet-api.jar
+file.reference.servlet-api.jar=C:\\Users\\Felipe\\Downloads\\apache-tomcat-7.0.53-windows-x64\\apache-tomcat-7.0.53\\lib\\servlet-api.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
