--- a/requerimento/nbproject/project.properties
+++ b/requerimento/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.ant.jar=C:\\Program Files\\NetBeans 8.0\\extide\\ant\\lib\\ant.jar
 file.reference.cglib-nodep-2.2.2.jar=web/META-INF/cglib-nodep-2.2.2.jar
 file.reference.easymock-3.1.jar=web/META-INF/easymock-3.1.jar
 file.reference.javassist-3.17.1-GA.jar=web/META-INF/javassist-3.17.1-GA.jar
@@ -57,7 +58,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.servlet-api.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.ant.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
